service_B/deploy/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-nginx
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.com 
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
